--- a/social-stroop/running_exp_qualtrics_template.html
+++ b/social-stroop/running_exp_qualtrics_template.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Stroop_for_qualtrics</title>
-        <script src="jspsych.js"></script>
-        <script src="plugins/jspsych-instructions.js" type="text/javascript"></script>
-        <script src="plugins/jspsych-html-keyboard-response.js"></script>
-        <script src="plugins/jspsych-html-button-response.js"></script>
-        <script src="post_stroop_task_main_pool1.js"></script> 
-        <link href="css/jspsych.css" rel="stylesheet" type="text/css">
+        <script src="../jspsych.js"></script>
+        <script src="../plugins/jspsych-instructions.js" type="text/javascript"></script>
+        <script src="../plugins/jspsych-html-keyboard-response.js"></script>
+        <script src="../plugins/jspsych-html-button-response.js"></script>
+        <script src="stroop_template.js"></script> 
+        <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </head>
     <body>
 
@@ -17,7 +17,7 @@
   <!-- Change 3: Adding extra scripts for Qualtrics -->  
   <!-- jspsych.css should be availble from your GitHub at 
     https://<your-github-username>.github.io/<your-experiment-name>/jspsych-6.1.0/css/jspsych.css -->
-    <link href="https://anitarestrepo16.github.io/social_stroop/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+    <link href="https://anitarestrepo16.github.io/jspsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 
     <div>
         <span style="font-size: 24px;">
