--- a/social-stroop/running_exp_qualtrics_template.html
+++ b/social-stroop/running_exp_qualtrics_template.html
@@ -5,6 +5,7 @@
         <script src="../jspsych.js"></script>
         <script src="../plugins/jspsych-instructions.js" type="text/javascript"></script>
         <script src="../plugins/jspsych-html-keyboard-response.js"></script>
+        <script src="../plugins/jspsych-survey-text.js"></script>
         <script src="../plugins/jspsych-html-button-response.js"></script>
         <script src="stroop_template.js"></script> 
         <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
