attempt at seeing the data

--- a/social-stroop/running_exp_qualtrics_template.html
+++ b/social-stroop/running_exp_qualtrics_template.html
@@ -65,6 +65,7 @@
             timeline: timeline,
             display_element: 'display_stage',
             on_finish: function() {
+                display_element: 'display_stage',
                 jsPsych.data.displayData();
             }
         })
