--- a/social-stroop/running_exp_qualtrics_template.html
+++ b/social-stroop/running_exp_qualtrics_template.html
@@ -65,7 +65,7 @@
             timeline: timeline,
             display_element: 'display_stage',
             on_finish: function() {
-                display_element: 'display_stage',
+                display_element: 'display_stage_background',
                 jsPsych.data.displayData();
             }
         })
