updated individual files

--- a/social-stroop/Post_pool2.html
+++ b/social-stroop/Post_pool2.html
@@ -7,7 +7,7 @@
         <script src="../plugins/jspsych-html-keyboard-response.js"></script>
         <script src="../plugins/jspsych-survey-text.js"></script>
         <script src="../plugins/jspsych-html-button-response.js"></script>
-        <script src="stroop_template.js"></script> 
+        <script src="Post_pool2.js"></script> 
         <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </head>
     <body>
