--- a/social-stroop/Baseline_pool1.html
+++ b/social-stroop/Baseline_pool1.html
@@ -7,7 +7,7 @@
         <script src="../plugins/jspsych-html-keyboard-response.js"></script>
         <script src="../plugins/jspsych-survey-text.js"></script>
         <script src="../plugins/jspsych-html-button-response.js"></script>
-        <script src="stroop_template.js"></script> 
+        <script src="Baseline_pool1.js"></script> 
         <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </head>
     <body>
